# ChangeLog for sci-libs/pynac
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pynac-0.3.9.1 (25 Jun 2015)

  25 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +pynac-0.3.9.1.ebuild, -pynac-0.3.9.ebuild:
  Micro bump of the next version of pynac

  09 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -pynac-0.2.6-r1.ebuild, -pynac-0.3.0.ebuild, -pynac-0.3.1.ebuild:
  remove old unused pynac

*pynac-0.3.9 (31 May 2015)

  31 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +pynac-0.3.9.ebuild:
  bump for sage 6.8

  14 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -pynac-0.3.5.ebuild:
  We can now remove pynac 0.3.5 which is not used by any sage version

*pynac-0.3.5 (05 May 2015)

  05 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +pynac-0.3.5.ebuild:
  remove pynac 0.3.5 by mistake. Restoring.

*pynac-0.3.7 (05 May 2015)

  05 May 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +pynac-0.3.7.ebuild, -pynac-0.3.5.ebuild:
  Bump pynac again

*pynac-0.3.5 (21 Apr 2015)

  21 Apr 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +pynac-0.3.5.ebuild, -pynac-0.3.3.ebuild:
  bump to pynac 0.3.5, the current version targeted for sage 6.7

*pynac-0.3.3 (13 Apr 2015)

  13 Apr 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +pynac-0.3.3.ebuild:
  Bump pynac for sage 6.7

  08 Apr 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  pynac-0.2.6-r1.ebuild, pynac-0.3.0.ebuild, pynac-0.3.1.ebuild,
  pynac-0.3.2-r1.ebuild:
  Pynac's home migrated from bitbucket to github

*pynac-0.3.2-r1 (25 Nov 2014)

  25 Nov 2014; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/pynac-0.3.2-pynac.pc.patch, +pynac-0.3.2-r1.ebuild,
  -pynac-0.3.2.ebuild:
  minor fix to pynac.pc file see https://bitbucket.org/pynac/pynac/issue/20
  /minor-thing-in-pynacpcin

*pynac-0.3.2 (30 Mar 2014)
