@@ -1,3 +1,4 @@
 DIST pynac-0.3.2.tar.gz 324649 SHA256 97d7b5b73a8691251fc0567c460c666d155ddaeeaad2d9c7733e42e5df7c7f60 SHA512 ce959f90303690109fc90ef32c97572ee2d768157198eb977498911e76451b0231e53df498b33d01370a11740dc924192ddd6099bfafa1aec53e5d993f4881c0
 DIST pynac-0.3.7.tar.gz 325790 SHA256 a5e5fa0c7cfd99626f27349a8ecfb0fa38c333a259ef0888604ec3cb5ffb9e1f SHA512 31ca09818230ebdd6e85d2cca70dc6e41bf89f71bb7ffdb6b6d0dec11d39f15c397119c5af1bb653607a76a5d1a2981e2aca0abaee9e643b02ee6b756c57b90a
 DIST pynac-0.3.9.1.tar.gz 326110 SHA256 c55a9155eaaf0d011aa4dce0c5e2bf4e327a874f271c5217aa9ef89df9b50c46 SHA512 14bb136d0a0c1e0750925349d4edc74983b8eee244d6fff9c1243829a68b19d27afa834631bd53c3751e8e12d0afae85ed2b11ec7e42dc1c5dac45848d0f07b2
+DIST pynac-0.3.9.2.tar.gz 326698 SHA256 283c1522d6a62c36d0491f6e9839a1109b5097b3c38afc9c65eb7d8c74edea16 SHA512 9915457f93f44609fd93681560e28885e003feacc831fafeca9b5b7ab6503392e2fd5055dbafd45cab797c5c7def5e278fd95093c2b5d43f4b24faab830f4784
