@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pynac-0.3.9.2 (13 Jul 2015)
+
+  13 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
+  +pynac-0.3.9.2.ebuild:
+  bump pynac for next beta/rc
+
 *pynac-0.3.9.1 (25 Jun 2015)
 
   25 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
